--- a/base-image/requirements.txt
+++ b/base-image/requirements.txt
@@ -1,6 +1,6 @@
-#keras==2.9.0
-#Keras-Preprocessing==1.1.2
-#pandas==1.4.1
-#scikit-learn==1.1.1
-#tensorflow==2.9.1
+keras
+Keras-Preprocessing
+pandas
+scikit-learn
+tensorflow
 flask
