--- a/base-image/requirements.txt
+++ b/base-image/requirements.txt
@@ -1,6 +1,27 @@
-keras
-Keras-Preprocessing
-pandas
-scikit-learn
-tensorflow
-flask
+# This file is used by pip to install required python packages
+# Usage: pip install -r requirements.txt
+
+# Flask Framework
+click==8.1.3
+Flask==2.1.2
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+Werkzeug==2.1.2
+
+# Flask Packages
+Flask-Login==0.6.1
+Flask-Migrate==3.1.0
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.1
+Flask-User==1.0.2.2
+
+# Automated tests
+pytest==7.1.2
+pytest-cov==3.0.0
+
+# Others
+numpy==1.23.0
+tensorflow==2.9.1
+keras==2.9.0
